--- a/webroot/css/app.css
+++ b/webroot/css/app.css
@@ -5308,8 +5308,7 @@ section#splash.pane {
   min-width: 25rem;
   min-height: 25rem;
   max-height: 75%;
-  background-color: white;
-  overflow: clip; }
+  background-color: white; }
   #splash-modal h1 {
     width: 100%;
     height: 4rem;
@@ -5320,8 +5319,7 @@ section#splash.pane {
     background-color: #0779be; }
   #splash-modal .content {
     padding: 1rem;
-    width: 100%;
-    overflow: clip; }
+    width: 100%; }
 
 a.close-splash-modal {
   float: right;
@@ -5380,14 +5378,16 @@ html, nav, body, main, footer {
 
 body#menu {
   background-image: url("../img/menu_bg.xlg.bright.jpg");
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  overflow: auto; }
 
 main#menu {
-  position: fixed;
+  position: relative;
   width: 100%;
   top: 0;
   left: 0;
-  margin-top: 5.3125rem; }
+  margin-top: 5.3125rem;
+  overflow: auto; }
 
 /**************************************************************
 
