--- a/webroot/scss/templates/splash.scss
+++ b/webroot/scss/templates/splash.scss
@@ -124,7 +124,7 @@ section#splash.pane {
   min-height:rem-calc(400px);
   max-height:75%;
   background-color:white;
-  overflow:clip;
+//  overflow:clip;
   h1 {
     width:100%;
     height:4rem;
@@ -138,7 +138,7 @@ section#splash.pane {
   .content {
     padding:1rem;
     width:100%;
-    overflow:clip;
+ //   overflow:clip;
   }
 }
 
